# task2

./: Account.cpp  Account.h  Bank.cpp  Bank.h  CMakeLists.txt  Client.cpp  Client.h  GazpromBank.h  JurClient.cpp  JurClient.h  PhysicalClient.cpp  PhysicalClient.h  SberBank.h  a.out  main.cpp
